--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Rueckfallprophylaxe</string>
+    <string name="app_name">Rückfallprophylaxe</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_diary">Tagebuch</string>
+    <string name="btn_tagebuch">Tagebuch</string>
+    <string name="action_newEntry">Neuer Eintrag</string>
+    <string name="title_activity_new_entry">Eintrag hinzufügen</string>
+    <string name="action_addAttachment">Bild hinzufügen</string>
+    <string name="action_createEntry">Eintrag speichern</string>
 
 </resources>
