--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -10,6 +10,18 @@
     <string name="title_activity_new_entry">Eintrag hinzufügen</string>
     <string name="action_addAttachment">Bild hinzufügen</string>
     <string name="action_createEntry">Eintrag speichern</string>
+    <string name="title_hint">Titel</string>
+    <string name="entry_hint">Eintrag</string>
+    <string-array name="mood_array">
+        <item>Angst</item>
+        <item>Aggression</item>
+        <item>Einsamkeit</item>
+        <item>Frust</item>
+         <item>Gut</item>
+        <item>Langeweile</item>
+        <item>Suchtdruck</item>
+    </string-array>
+    <string name="textMood">Stimmung:</string>
     <string name="label_adress">Adresse:</string>
     <string name="label_phone">Telefonnummer:</string>
     <string name="label_mail">E-Mail:</string>
