Modified NewEntryActivity: - Date field with current date - Modified text field length to fill_parent - Save button

--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -46,5 +46,6 @@
     <string name="Ablekung4">Computer spielen</string>
     <string name="title_activity_koffer">Notfall Koffer</string>
     <string name="title_activity_koffer2">Notfall Koffer 2</string>
+    <string name="btn_saveDiaryEntry">Speichern</string>
 
 </resources>
