Password verification and determination created. Maybe a deinstallation and re-installation of the app is necessary for the app to work again.

--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -47,5 +47,7 @@
     <string name="title_activity_koffer">Notfall Koffer</string>
     <string name="title_activity_koffer2">Notfall Koffer 2</string>
     <string name="btn_saveDiaryEntry">Speichern</string>
+    <string name="title_password_determine">Passwort erstellen</string>
+    <string name="title_password_verify">Passwortabfrage</string>
 
 </resources>
