--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -61,5 +61,8 @@
     <string name="toast_register_successfull">Das Anmelden war erfolgreich</string>
     <string name="ready">Fertig</string>
     <string name="data_loading">Deine Daten werden eingerichtet...</string>
+    <string name="safety_actions">Ich tue etwas was mir hilft</string>
+    <string name="safety_thoughts">Ich denke an etwas was mir hilft</string>
+    <string name="help_people">Ich brauche Hilfe</string>
 
 </resources>
