Little Style Changes and yellow button works now

--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -21,6 +21,7 @@
         <item>Langeweile</item>
         <item>Suchtdruck</item>
     </string-array>
+    <string name="how_you_feel">Wie fühlst du dich heute?</string>
     <string name="textMood">Stimmung:</string>
     <string name="label_adress">Adresse:</string>
     <string name="label_phone">Telefonnummer:</string>
