--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -38,7 +38,7 @@
          beitragen soll stehen oder so.</string>
     <string name="wuetend_button">Wütend</string>
     <string name="Ablenkung_button">Ablenkung</string>
-    <string name="MP3_button">Musik Playlist</string>
+    <string name="MP3_button">Musik</string>
     <string name="Spiele_button">Spiele oder Apps</string>
     <string name="title_activity_ablenkung_wuetend">Ablenkung_wuetend</string>
     <string name="Ablekung1">Mandala malen</string>
@@ -90,4 +90,5 @@
 	<string name="diary_addPictureTooManyExpl">Das ist ein Bild zuviel. Es sind maximal %d Bilder erlaubt.</string>
 	<string name="lbl_distractions">Hier ein paar Ablenkungsmöglichkeiten:</string>
 	<string name="title_contactpoint_view">Anlaufstellen</string>
+	<string name="lbl_music">Oder hör doch einfach ein wenig</string>
 </resources>
